# msds_capstone

./: README.md  app.py  pyproject.toml
api_scrape/: scrape_comments.py
api_scrape/metadata/: scrape_meta.py
app/: app.py
data/: comment_ids.csv  public_comments_133.csv
dev/: dev_notebook.ipynb
